fix: disable Zend Signals for ZTS builds (#1331)

--- a/Dockerfile-linux.template
+++ b/Dockerfile-linux.template
@@ -393,6 +393,8 @@ RUN set -eux; \
 {{ ) else ( -}}
 		--enable-maintainer-zts \
 {{ ) end -}}
+# https://externals.io/message/118859
+		--disable-zend-signals \
 {{ ) else "" end -}}
 	; \
 	make -j "$(nproc)"; \
