--- a/8.0/alpine3.16/zts/Dockerfile
+++ b/8.0/alpine3.16/zts/Dockerfile
@@ -163,6 +163,8 @@ RUN set -eux; \
 		--disable-cgi \
 		\
 		--enable-zts \
+# https://externals.io/message/118859
+		--disable-zend-signals \
 	; \
 	make -j "$(nproc)"; \
 	find -type f -name '*.a' -delete; \
