--- a/8.2-rc/alpine3.15/zts/Dockerfile
+++ b/8.2-rc/alpine3.15/zts/Dockerfile
@@ -162,6 +162,9 @@ RUN set -eux; \
 		\
 		--disable-cgi \
 		\
+# https://github.com/docker-library/php/pull/939#issuecomment-730501748
+		--enable-embed \
+		\
 		--enable-zts \
 # https://externals.io/message/118859
 		--disable-zend-signals \
