--- a/8.2-rc/buster/apache/Dockerfile
+++ b/8.2-rc/buster/apache/Dockerfile
@@ -118,9 +118,9 @@ ENV PHP_LDFLAGS="-Wl,-O1 -pie"
 
 ENV GPG_KEYS 39B641343D8C104B2B146DC3F9C39DC0B9698544 E60913E4DF209907D8E30D96659A97C9CF2A795A 1198C0117593497A5EC5C199286AF1F9897469DC
 
-ENV PHP_VERSION 8.2.0RC6
-ENV PHP_URL="https://downloads.php.net/~sergey/php-8.2.0RC6.tar.xz" PHP_ASC_URL="https://downloads.php.net/~sergey/php-8.2.0RC6.tar.xz.asc"
-ENV PHP_SHA256="b1b4fcb08c257b73ae817c6a2d93b78ca5e5ace42c5f5887ed6447f06fa7bfc6"
+ENV PHP_VERSION 8.2.0RC7
+ENV PHP_URL="https://downloads.php.net/~pierrick/php-8.2.0RC7.tar.xz" PHP_ASC_URL="https://downloads.php.net/~pierrick/php-8.2.0RC7.tar.xz.asc"
+ENV PHP_SHA256="31204434c525f85e64f666a766f623443637616b184e8652414f619a127c5ef7"
 
 RUN set -eux; \
 	\
