--- a/8.2-rc/alpine3.18/cli/Dockerfile
+++ b/8.2-rc/alpine3.18/cli/Dockerfile
@@ -4,7 +4,7 @@
 # PLEASE DO NOT EDIT IT DIRECTLY.
 #
 
-FROM alpine:3.16
+FROM alpine:3.18
 
 # dependencies required for running "phpize"
 # these get automatically installed and removed by "docker-php-ext-*" (unless they're already installed)
@@ -55,11 +55,11 @@ ENV PHP_CFLAGS="-fstack-protector-strong -fpic -fpie -O2 -D_LARGEFILE_SOURCE -D_
 ENV PHP_CPPFLAGS="$PHP_CFLAGS"
 ENV PHP_LDFLAGS="-Wl,-O1 -pie"
 
-ENV GPG_KEYS 528995BFEDFBA7191D46839EF9BA0ADA31CBD89E 39B641343D8C104B2B146DC3F9C39DC0B9698544 F1F692238FBC1666E5A5CCD4199F9DFEF6FFBAFD
+ENV GPG_KEYS 39B641343D8C104B2B146DC3F9C39DC0B9698544 E60913E4DF209907D8E30D96659A97C9CF2A795A 1198C0117593497A5EC5C199286AF1F9897469DC
 
-ENV PHP_VERSION 8.1.19RC1
-ENV PHP_URL="https://downloads.php.net/~patrickallaert/php-8.1.19RC1.tar.xz" PHP_ASC_URL="https://downloads.php.net/~patrickallaert/php-8.1.19RC1.tar.xz.asc"
-ENV PHP_SHA256="47f9da7fe28c2c20600a01e8298253a7ff3d96becfb3b04acb28ac4f3cffaecf"
+ENV PHP_VERSION 8.2.6RC1
+ENV PHP_URL="https://downloads.php.net/~sergey/php-8.2.6RC1.tar.xz" PHP_ASC_URL="https://downloads.php.net/~sergey/php-8.2.6RC1.tar.xz.asc"
+ENV PHP_SHA256="324be0b12c83710de806b8a8ae81394da5bbcaff893e3fff7f2a9a9bd334336d"
 
 RUN set -eux; \
 	\
